Fix bug where datepicker and combobox didnt open on phone. Add styles for generic scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,22 @@
   --primary-dark: 142.1 70.6% 45.3%;
 }
 
+* {
+  scrollbar-width: thin;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+::-webkit-scrollbar {
+  border-radius: 10px;
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
